--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -14,6 +14,7 @@ html {
 body {
   background-color: $backgroun-primary;
   font-family: "Noto Sans", sans-serif;
+  overflow-x: hidden;
 }
 
 header {
